Main and Items finished

--- a/ProjectGroup5/ProjectGroup5.csproj
+++ b/ProjectGroup5/ProjectGroup5.csproj
@@ -13,6 +13,12 @@
 
   <ItemGroup>
     <None Update="Invoice.accdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Invoice.laccdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Invoice.mdb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
